// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should render a Card with Footer 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="card"
  >
    <div
      class="BaseBox-bmPWx CardSurfaceweb__CardSurface-sc-1pgxikk-0 dXrkKy htwYNg"
      data-blade-component="base-box"
      elevation="lowRaised"
    >
      <div
        class="BaseBox-bmPWx"
        data-blade-component="card-body"
      >
        <p
          class="StyledBaseText-dVBfTO eIdQFo"
          data-blade-component="text"
        >
          Plain Card
        </p>
      </div>
      <div
        class="BaseBox-bmPWx jWqAWn"
        data-blade-component="card-footer"
      >
        <div
          class="BaseBox-bmPWx ekWGYe"
          data-blade-component="base-box"
        />
        <div
          class="BaseBox-bmPWx Divider__StyledDivider-sc-8k3avj-0 jfizlv jvaPlR"
          data-blade-component="divider"
        />
        <div
          class="BaseBox-bmPWx beNNrm"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx dUEwku"
            data-blade-component="base-box"
          >
            <p
              class="StyledBaseText-dVBfTO ldPEnv"
              data-blade-component="text"
            >
              Card Footer
            </p>
            <p
              class="StyledBaseText-dVBfTO fedBF"
              data-blade-component="text"
            >
              Card footer subtitle
            </p>
          </div>
          <div
            class="BaseBox-bmPWx cgOfrU"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx lawERa"
              data-blade-component="base-box"
            >
              <button
                class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 hDfvuZ"
                data-blade-component="button"
                role="button"
                type="button"
              >
                <div
                  class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
                  data-blade-component="base-box"
                >
                  <div
                    class="StyledBaseText-dVBfTO jSaisz"
                    data-blade-component="base-text"
                  >
                    Delete
                  </div>
                </div>
              </button>
            </div>
            <div
              class="BaseBox-bmPWx hFfAen"
              data-blade-component="base-box"
            />
            <div
              class="BaseBox-bmPWx lawERa"
              data-blade-component="base-box"
            >
              <button
                class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 fcmfVa"
                data-blade-component="button"
                role="button"
                type="button"
              >
                <div
                  class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
                  data-blade-component="base-box"
                >
                  <div
                    class="StyledBaseText-dVBfTO brGLEM"
                    data-blade-component="base-text"
                  >
                    Save
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render a Card with Header 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="card"
  >
    <div
      class="BaseBox-bmPWx CardSurfaceweb__CardSurface-sc-1pgxikk-0 dXrkKy htwYNg"
      data-blade-component="base-box"
      elevation="lowRaised"
    >
      <div
        class="BaseBox-bmPWx gvTYQa"
        data-blade-component="card-header"
      >
        <div
          class="BaseBox-bmPWx cEYTaO"
          data-blade-component="base-box"
        >
          <div
            class="BaseBox-bmPWx iOdcTa"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx eFvDfp"
              data-blade-component="base-box"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                  data-blade-component="svg-path"
                  fill="hsla(217, 56%, 17%, 1)"
                />
                <path
                  d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                  data-blade-component="svg-path"
                  fill="hsla(217, 56%, 17%, 1)"
                />
                <path
                  clip-rule="evenodd"
                  d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                  data-blade-component="svg-path"
                  fill="hsla(217, 56%, 17%, 1)"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="BaseBox-bmPWx kFTMWM"
              data-blade-component="base-box"
            >
              <div
                class="BaseBox-bmPWx bdZEQS"
                data-blade-component="base-box"
              >
                <h6
                  class="StyledBaseText-dVBfTO dFejDk"
                  data-blade-component="heading"
                >
                  Card Header
                </h6>
                <div
                  class="BaseBox-bmPWx ktWMhw"
                  data-blade-component="base-box"
                >
                  <div
                    class="BaseBox-bmPWx jLCxzZ"
                    data-blade-component="counter"
                  >
                    <div
                      class="BaseBox-bmPWx StyledCounterweb__StyledCounter-sc-1itt9w6-0 lldTHu dTYmGd"
                      data-blade-component="base-box"
                    >
                      <div
                        class="BaseBox-bmPWx KJLNh"
                        data-blade-component="base-box"
                      >
                        <p
                          class="StyledBaseText-dVBfTO hlMkHt"
                          data-blade-component="text"
                        >
                          12
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledBaseText-dVBfTO eCIRwe"
                data-blade-component="text"
              >
                Card subtitle
              </p>
            </div>
          </div>
          <div
            class="BaseBox-bmPWx cxaWQL"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx jLCxzZ"
              data-blade-component="badge"
            >
              <div
                class="BaseBox-bmPWx StyledBadgeweb__StyledBadge-sc-1svn4tv-0 cRtrfR dnvyGQ"
                data-blade-component="base-box"
              >
                <div
                  class="BaseBox-bmPWx KJLNh"
                  data-blade-component="base-box"
                >
                  <p
                    class="StyledBaseText-dVBfTO fuxoMy"
                    data-blade-component="text"
                  >
                    NEW
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="BaseBox-bmPWx Divider__StyledDivider-sc-8k3avj-0 jfizlv jvaPlR"
          data-blade-component="divider"
        />
      </div>
      <div
        class="BaseBox-bmPWx"
        data-blade-component="card-body"
      >
        <p
          class="StyledBaseText-dVBfTO eIdQFo"
          data-blade-component="text"
        >
          Plain Card
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render a Card without 0 padding 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="card"
  >
    <div
      class="BaseBox-bmPWx CardSurfaceweb__CardSurface-sc-1pgxikk-0 hbQMWE htwYNg"
      data-blade-component="base-box"
      elevation="lowRaised"
    >
      <div
        class="BaseBox-bmPWx"
        data-blade-component="card-body"
      >
        Plain Card
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render a border when elevation is \`none\` 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="card"
  >
    <div
      class="BaseBox-bmPWx CardSurfaceweb__CardSurface-sc-1pgxikk-0 cxGVol hPOrZI"
      data-blade-component="base-box"
      elevation="none"
    >
      <div
        class="BaseBox-bmPWx"
        data-blade-component="card-body"
      >
        Plain Card
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render a plain Card 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="card"
  >
    <div
      class="BaseBox-bmPWx CardSurfaceweb__CardSurface-sc-1pgxikk-0 kgulgq fiQyzd"
      data-blade-component="base-box"
      elevation="highRaised"
    >
      <div
        class="BaseBox-bmPWx"
        data-blade-component="card-body"
      >
        Plain Card
      </div>
    </div>
  </div>
</div>
`;
